experimental graphical client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ path = "src/lib.rs"
 anyhow = "1.0.32"
 yaml-rust = "0.4.4"
 image = "0.23.9"
+minifb = "0.18.0"
+notify = "4.0.15"
+rand = "0.7.3"
